<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/firstTextView"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/red"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/secondTextView"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/green"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/thirdTextView"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/blue"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/fourthTextView"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="normal"
            android:background="@color/red"/>

        <TextView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="top"
            android:text="@string/fifthTextView"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginLeft="235dp"
            android:layout_marginStart="225dp"
            android:background="@color/green"/>

        <TextView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp"
            android:text="@string/sixthTextView"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="normal"
            android:gravity="center"
            android:background="@color/blue" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/seventhTextView"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/red"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/eightTexView"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/green"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/ninth"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/blue"/>

    </LinearLayout>



</LinearLayout>